--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,10 @@
     @apply hidden h-6 md:inline-flex cursor-pointer hover:scale-125 transition-all duration-150 ease-out
   }
 
+  .navBtnOut {
+    @apply h-6 md:inline-flex cursor-pointer hover:scale-125 transition-all duration-150 ease-out
+  }
+
   .iconBtn {
     @apply h-7 hover:scale-125 cursor-pointer transition-all duration-150 ease-out
   }
